--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.2.0",
-    "@astrojs/tailwind": "^3.1.3",
-    "@astrojs/vercel": "^3.8.2",
+    "@astrojs/netlify": "^3.0.1",
+    "@astrojs/svelte": "^4.0.2",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^5.0.0",
     "@nanostores/persistent": "^0.8.0",
     "@shopify/hydrogen-react": "^2023.7.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "astro": "^2.10.15",
+    "astro": "^3.1.0",
     "nanostores": "^0.8.1",
     "svelte": "^3.59.2",
     "zod": "^3.22.2"
@@ -26,6 +27,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.1",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
